[gd_scene load_steps=12 format=3 uid="uid://oi8qm3flhbiv"]

[ext_resource type="Script" path="res://Objects/Computer/basket_item.gd" id="1_wi71e"]
[ext_resource type="FontFile" uid="uid://d1rk4bbe2g02l" path="res://fonts/AcPlus_IBM_BIOS.ttf" id="2_55j8n"]
[ext_resource type="Texture2D" uid="uid://n5q82xrrojl8" path="res://UI/plus icon.png" id="4_dl061"]
[ext_resource type="Texture2D" uid="uid://c6i3by51gpy3q" path="res://UI/minus icon.png" id="5_t7udv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7hi0l"]
bg_color = Color(0.968627, 0.713726, 0.603922, 1)

[sub_resource type="LabelSettings" id="LabelSettings_d0hwe"]
font = ExtResource("2_55j8n")
font_size = 20
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_eg30q"]
font = ExtResource("2_55j8n")
font_size = 20
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="FontVariation" id="FontVariation_eqf8m"]
base_font = ExtResource("2_55j8n")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qa6fi"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_61yea"]
bg_color = Color(0.792157, 0.0980392, 0, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_22sq8"]
bg_color = Color(1, 0.337255, 0.0666667, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[node name="BasketItem" type="Panel" groups=["basket_item"]]
custom_minimum_size = Vector2(490, 90)
offset_right = 490.0
offset_bottom = 90.0
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_7hi0l")
script = ExtResource("1_wi71e")

[node name="Texture" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 14.0
offset_right = 84.0
offset_bottom = 75.0
expand_mode = 1
stretch_mode = 4

[node name="ItemTag" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.5
offset_top = -11.5
offset_right = 75.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Item Name"
label_settings = SubResource("LabelSettings_d0hwe")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Quantity" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 119.5
offset_top = -11.5
offset_right = 136.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "1"
label_settings = SubResource("LabelSettings_eg30q")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Plus" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 165.0
offset_top = -32.0
offset_right = 229.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(32, 32)
texture_normal = ExtResource("4_dl061")

[node name="Minus" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 144.0
offset_top = -16.0
offset_right = 208.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("5_t7udv")

[node name="Remove" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -33.0
offset_bottom = 27.0
grow_horizontal = 0
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_eqf8m")
theme_override_styles/normal = SubResource("StyleBoxFlat_qa6fi")
theme_override_styles/hover = SubResource("StyleBoxFlat_61yea")
theme_override_styles/pressed = SubResource("StyleBoxFlat_22sq8")
text = "x"

[connection signal="gui_input" from="Plus" to="." method="_on_plus_gui_input"]
[connection signal="gui_input" from="Minus" to="." method="_on_minus_gui_input"]
[connection signal="pressed" from="Remove" to="." method="_on_remove_pressed"]
